@@ -1,6 +1,7 @@
 Version 1.4208:
 - Fix compatibility issue with newer versions of perl, which remove "." from
   @INC.
+- Check in standard tests, including one that skips the compile check on Windows
 
 Version 1.4207: Sun May 3 2015
 - Fix bug introduced in user_specified_filehandle.t by last release
